# prompts

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.linux  Makefile  README.md  README_zh.md  TODO.md  eslint.config.js  package-lock.json  package.json  quick_picker.html  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml  update-homebrew.yml
ignoredir/: DESIGN.md  NEXT.md
scripts/: release.sh
src/: App.tsx  index.css  quick-picker.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: QuickPicker.tsx  SettingsView.tsx  index.ts
src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx  Navigation.tsx  TitleBar.tsx  index.ts
src/components/prompt/: PromptCard.tsx  PromptDetailView.tsx  PromptEditor.tsx  PromptPreview.tsx  index.ts
src/components/ui/: Button.tsx  ConfirmModal.tsx  ContextMenu.tsx  InputModal.tsx  ShortcutInput.tsx  Toast.tsx  Toolbar.tsx
src/hooks/: useKeyboardShortcuts.ts
src/services/: importExportService.ts  index.ts  promptService.ts  settingsService.ts  storage.ts  updateService.ts
src/store/: index.ts
